--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^1.2.4",
+    "chart.js": "^3.9.1",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-calendar": "^4.0.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1"
   },
