--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.7",
+    "@heroicons/react": "^2.0.13",
     "@material-tailwind/react": "^1.2.4",
     "chart.js": "^3.9.1",
     "next": "12.3.1",
