--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.1.1"
   },
   "devDependencies": {
