--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-table": "^7.8.0",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
