--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.0.13",
     "@material-tailwind/react": "^1.2.4",
     "chart.js": "^3.9.1",
+    "exceljs": "^4.3.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
